# machine_learning

./: README.md  pyproject.toml  setup.py
machine_learning/: data_mungers.py  torch_helpers.py
machine_learning/graphical_models/: EFHs.py
machine_learning/neural_networks/: basic_components.py  sequence_networks.py  tf_helpers.py  torch_sequence_networks.py
neural_networks/: __init__.py  sequence_networks.py
