[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "machine_learning"
version = "0.8.0"
authors = [
  { name="J.G. Makin", email="jgmakin@gmail.com" },
]
description = "a collection of packages for ML projects, written in Python APIs for TensorFlow and PyTorch"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "utils-jgm @ git+https://github.com/jgmakin/utils-jgm.git",
    "matplotlib",
    "scipy",
    "torch; python_version >= '3.8'"
    "numpy>2.0; python_version >= '3.8'",
    "numpy==1.22.4; python_version < '3.8'",
    #####
    # these ought to be enforced by tensor2tensor, but they're not
    "kfac==0.2.0; python_version < '3.8'",
    "dopamine_rl==2.0.5; python_version < '3.8'",
    "gym==0.12.4; python_version < '3.8'",
    "absl-py==0.10.0; python_version < '3.8'",
    #####
    "tensorflow-probability==0.7; python_version < '3.8'",
    "tensor2tensor==1.15.7; python_version < '3.8'",
    "tfmpl; python_version < '3.8'",
    "protobuf==3.20.3; python_version < '3.8'",
    #  the cpu version will also work
    # "tensorflow-gpu==1.15.3; python_version < '3.8'" 
]

[project.urls]
"Homepage" = "https://github.com/jgmakin/machine_learning"
